--- a/client/index.html
+++ b/client/index.html
@@ -54,6 +54,8 @@
     <script src="js/APP/Views/NegociationView.js"></script>
     <script src="js/APP/Models/Mensage.js"></script>
     <script src="js/APP/Views/MensageView.js"></script>
+    <script src="js/APP/Services/ProxyFactory.js"></script>
+    <script src="js/APP/Helpers/Bind.js"></script>
     
     <script>
     "use strict";
